--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -22,85 +22,41 @@
     }
   }
 
+  &__icon {
+    width: 100px;
+    height: 100px;
+  }
+
   &__container {
     display: flex;
-    flex-direction: column;
-    gap: 40px;
-    max-width: var(--page-max-width-main);
-    width: 100%;
-    margin: 0 auto;
-    padding: 30px 16px 40px 16px;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    // max-width: var(--page-max-width-main);
+    // width: 100%;
+    // margin: 0 auto;
+    padding: 30px 180px 40px 180px;
+
+    & svg {
+      flex-shrink: 0;
+    }
   }
 
   &__title {
     margin: 0px !important;
-    font-size: 36px;
+    font-size: 60px;
     font-weight: 400;
-    line-height: 43.75px;
+    line-height: 73px;
     color: var(--page-color-white);
-    letter-spacing: 0.7px;
+    letter-spacing: 1px;
     text-transform: uppercase;
-    max-width: 780px;
+    text-align: center;
+    // max-width: 780px;
     width: 100%;
 
     &_red {
       color: var(--page-color-red);
     }
-  }
-
-  &__btns {
-    display: flex;
-    gap: 50px;
-    width: 100%;
-  }
-
-  &__btn {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 28px;
-    flex-basis: 50%;
-    margin: 0px !important;
-    color: var(--page-color-black);
-    background-color: var(--page-color-white);
-    border-radius: 10px;
-    padding: 20px 100px 20px 50px;
-    border: none !important;
-    white-space: nowrap;
-    outline: none !important;
-    text-transform: uppercase;
-    cursor: pointer;
-    letter-spacing: 0.3px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-
-    &:hover {
-      background-color: var(--page-color-gray) !important;
-      color: var(--page-color-red) !important;
-    }
-
-    &:active {
-      background-color: var(--page-color-white) !important;
-      color: var(--page-color-link) !important;
-    }
-  }
-}
-
-@media screen and (max-width: 1120px) {
-  .header__btn {
-    padding-right: 50px;
-    padding-left: 50px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .header__btn {
-    padding-right: 24px;
-    padding-left: 24px;
-    font-size: 16px;
-    line-height: 23px;
   }
 }
 
@@ -123,33 +79,11 @@
     font-size: 28px;
     line-height: 34px;
   }
-
-  .header__btns {
-    gap: 16px;
-  }
-
-  .header__btn {
-    padding: 16px 24px;
-    font-size: 14px;
-    line-height: 18px;
-  }
-}
-
-@media screen and (max-width: 668px) {
-  .header__btns {
-    flex-direction: column;
-  }
 }
 
 @media screen and (max-width: 576px) {
   .header__title {
     font-size: 20px;
     line-height: 24.3px;
-  }
-}
-
-@media screen and (max-width: 390px) {
-  .header__btn svg {
-    display: none;
   }
 }
