--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -84,6 +84,7 @@
   padding: 0px;
   cursor: pointer;
   border-radius: 5px;
+  margin-left: auto;
   transition: background-color 0.3s ease;
 
   & svg {
