--- a/src/modules/Main/components/Support/styles.module.scss
+++ b/src/modules/Main/components/Support/styles.module.scss
@@ -31,7 +31,7 @@
     padding: 20px 30px 20px 0px;
 
     &_m {
-      margin: 30px 0px 20px 0px;
+      margin: 30px 30px 20px 0px;
     }
   }
 
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    width: 100%;
   }
 
   &__text {
