--- a/src/components/Form/components/ItemProfession/styles.module.scss
+++ b/src/components/Form/components/ItemProfession/styles.module.scss
@@ -1,1 +1,47 @@
-﻿
+﻿.item-profession {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18.2px;
+    margin: 0px !important;
+    color: var(--page-color-link);
+    background-color: var(--page-color-white) !important;
+    border-radius: 0px;
+    padding: 0px;
+    border: none !important;
+    white-space: nowrap;
+    outline: none !important;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease,
+      border-color 0.3s ease;
+
+    & svg path {
+      transition: fill 0.3s ease;
+    }
+
+    &:hover {
+      background-color: var(--page-color-white) !important;
+      color: var(--page-color-black) !important;
+
+      & svg path {
+        fill: var(--page-color-black);
+      }
+    }
+
+    &:active {
+      background-color: var(--page-color-white) !important;
+      color: var(--page-color-dark-blue) !important;
+
+      & svg path {
+        fill: var(--page-color-dark-blue);
+      }
+    }
+  }
+}
