finished component FormResult, added responsive for mobile pages information, knowledge, reference

--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -133,6 +133,13 @@
       flex-direction: column;
       gap: 8px;
     }
+
+    &_desc {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 21.6px;
+      color: var(--page-color-link);
+    }
   }
 
   &_request .form__header {
