--- a/src/modules/Main/components/Information/styles.module.scss
+++ b/src/modules/Main/components/Information/styles.module.scss
@@ -64,58 +64,62 @@
   }
 }
 
-// @media screen and (max-width: 960px) {
-//   .advantages {
-//     margin: 50px 0px;
-//   }
+@media screen and (max-width: 960px) {
+  .information {
+    margin: 50px 0px;
+  }
 
-//   .advantages__wrapper {
-//     margin-top: 30px;
-//   }
+  .information__wrapper {
+    margin-top: 30px;
+  }
 
-//   .advantages__card {
-//     flex-direction: column;
+  .information__card {
+    flex-direction: column;
 
-//     &_img {
-//       align-self: center;
-//     }
-//   }
-// }
+    &_text {
+      text-align: center;
+    }
 
-// @media screen and (max-width: 767px) {
-//   .advantages {
-//     margin: 36px 0px;
+    &_img {
+      align-self: center;
+    }
+  }
+}
 
-//     &__title {
-//       font-size: 28px;
-//       line-height: 32px;
-//     }
+@media screen and (max-width: 767px) {
+  .information {
+    margin: 36px 0px;
 
-//     &__card {
-//       padding: 24px 20px;
-//       width: 100%;
-//       flex-basis: 100%;
-//     }
-//   }
-// }
+    &__title {
+      font-size: 28px;
+      line-height: 32px;
+    }
 
-// @media screen and (max-width: 576px) {
-//   .advantages__title {
-//     font-size: 20px;
-//     line-height: 24px;
-//   }
+    &__card {
+      padding: 24px 20px;
+      width: 100%;
+      flex-basis: 100%;
+    }
+  }
+}
 
-//   .advantages__text {
-//     font-size: 18px;
-//     line-height: 23.8px;
-//   }
+@media screen and (max-width: 576px) {
+  .information__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
 
-//   .advantages__wrapper {
-//     margin-top: 16px;
-//   }
+  .information__text {
+    font-size: 18px;
+    line-height: 23.8px;
+  }
 
-//   .advantages__card_title {
-//     font-size: 16px;
-//     line-height: 21.6px;
-//   }
-// }
+  .information__wrapper {
+    margin-top: 16px;
+  }
+
+  .information__card_title {
+    font-size: 16px;
+    line-height: 21.6px;
+  }
+}
