--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -32,10 +32,8 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
-    // max-width: var(--page-max-width-main);
-    // width: 100%;
-    // margin: 0 auto;
-    padding: 30px 180px 40px 180px;
+    margin: 0px auto;
+    padding: 30px 20px 40px 20px;
 
     & svg {
       flex-shrink: 0;
@@ -51,7 +49,6 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     text-align: center;
-    // max-width: 780px;
     width: 100%;
 
     &_red {
@@ -67,12 +64,17 @@
   }
 
   .header__container {
-    gap: 24px;
+    gap: 20px;
     padding: 24px 16px;
   }
 
   .header__image {
     max-height: 100%;
+  }
+
+  .header__icon {
+    width: 50px;
+    height: 50px;
   }
 
   .header__title {
@@ -82,6 +84,11 @@
 }
 
 @media screen and (max-width: 576px) {
+  .header__container {
+    flex-direction: column;
+    gap: 10px;
+  }
+
   .header__title {
     font-size: 20px;
     line-height: 24.3px;
