--- a/src/modules/Main/components/Support/components/News/styles.module.scss
+++ b/src/modules/Main/components/Support/components/News/styles.module.scss
@@ -95,15 +95,24 @@
   }
 
   &__wrapper {
+    height: 300px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 16px;
+    justify-content: space-between;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   &__img {
     width: 100%;
     height: 130px;
+    flex-shrink: 0;
 
     & img {
       width: 100%;
@@ -118,6 +127,7 @@
     font-weight: 400;
     line-height: 18.9px;
     color: var(--page-color-link);
+    min-height: 19px;
   }
 
   &__text {
@@ -126,6 +136,18 @@
     font-weight: 400;
     line-height: 18.9px;
     color: var(--page-color-white);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+
+    &_m {
+      margin-bottom: 27px;
+      -webkit-line-clamp: 4;
+      line-clamp: 4;
+    }
   }
 
   &__btn {
