add responsive pages

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -57,6 +57,12 @@
   }
 }
 
+@media screen and (max-width: 960px) {
+  .header__title {
+    font-size: 56px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .header {
     max-height: 100%;
