--- a/src/modules/Main/components/Mentor/styles.module.scss
+++ b/src/modules/Main/components/Mentor/styles.module.scss
@@ -16,13 +16,18 @@
 
   &__wrapper {
     display: flex;
+    gap: 40px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 50, 75, 0.02),
+      0px 3px 7px 0px rgba(0, 50, 75, 0.03),
+      9px 5px 15px 0px rgba(0, 50, 75, 0.03),
+      13px 11px 29px 0px rgba(0, 50, 75, 0.04),
+      3px 31px 80px 0px rgba(0, 50, 75, 0.06);
   }
 
   &__img {
-    max-width: 420px;
-    width: 100%;
-    max-height: 530px;
-    height: 100%;
+    flex-shrink: 0;
+    width: 420px;
 
     & img {
       width: 100%;
@@ -32,7 +37,7 @@
   }
 
   &__content {
-    padding: 60px;
+    padding: 50px 20px 60px 60px;
   }
 
   &__container {
@@ -83,58 +88,79 @@
   }
 }
 
-// @media screen and (max-width: 960px) {
-//   .advantages {
-//     margin: 50px 0px;
-//   }
+@media screen and (max-width: 1080px) {
+  .mentor__img {
+    height: 450px;
+    align-self: center;
+  }
 
-//   .advantages__wrapper {
-//     margin-top: 30px;
-//   }
+  .mentor__content {
+    padding: 40px 20px 40px 40px;
+  }
+}
 
-//   .advantages__card {
-//     flex-direction: column;
+@media screen and (max-width: 960px) {
+  .mentor {
+    margin: 50px 0px;
 
-//     &_img {
-//       align-self: center;
-//     }
-//   }
-// }
+    &__wrapper {
+      margin-top: 30px;
+      gap: 20px;
+    }
 
-// @media screen and (max-width: 767px) {
-//   .advantages {
-//     margin: 36px 0px;
+    &__content {
+      padding: 20px;
+    }
 
-//     &__title {
-//       font-size: 28px;
-//       line-height: 32px;
-//     }
+    &__img {
+      max-width: 300px;
+      width: 100%;
+    }
+  }
+}
 
-//     &__card {
-//       padding: 24px 20px;
-//       width: 100%;
-//       flex-basis: 100%;
-//     }
-//   }
-// }
+@media screen and (max-width: 767px) {
+  .mentor {
+    margin: 36px 0px;
 
-// @media screen and (max-width: 576px) {
-//   .advantages__title {
-//     font-size: 20px;
-//     line-height: 24px;
-//   }
+    &__title {
+      font-size: 28px;
+      line-height: 32px;
+    }
 
-//   .advantages__text {
-//     font-size: 18px;
-//     line-height: 23.8px;
-//   }
+    &__wrapper {
+      flex-direction: column;
+    }
 
-//   .advantages__wrapper {
-//     margin-top: 16px;
-//   }
+    &__content {
+      order: 2;
+    }
 
-//   .advantages__card_title {
-//     font-size: 16px;
-//     line-height: 21.6px;
-//   }
-// }
+    &__img {
+      height: 300px;
+      order: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .mentor__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 16px !important;
+  }
+
+  .mentor__text {
+    font-size: 16px;
+    line-height: 20.8px;
+  }
+
+  .mentor__wrapper {
+    margin-top: 16px;
+    gap: 16px;
+  }
+
+  .mentor__content {
+    padding: 8px 16px;
+  }
+}
