--- a/src/modules/Main/components/Starting/styles.module.scss
+++ b/src/modules/Main/components/Starting/styles.module.scss
@@ -25,7 +25,7 @@
     flex-wrap: wrap;
     gap: 20px;
     margin-top: 50px;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   &__card {
@@ -132,80 +132,81 @@
   }
 }
 
-// @media screen and (max-width: 960px) {
-//   .starting {
-//     margin: 50px 0px;
-//   }
-// }
+@media screen and (max-width: 960px) {
+  .starting {
+    margin: 50px 0px;
 
-// @media screen and (max-width: 910px) {
-//   .starting__card {
-//     flex-basis: calc(50% - 10px);
-//     padding: 40px 25px;
-//   }
-// }
+    &__card {
+      min-width: auto;
+      flex-basis: calc(50% - 15px);
+    }
+  }
+}
 
-// @media screen and (max-width: 767px) {
-//   .starting {
-//     margin: 36px 0px;
+@media screen and (max-width: 910px) {
+  .starting__card {
+    flex-basis: calc(50% - 10px);
+    padding: 40px 25px;
+  }
+}
 
-//     &__title {
-//       font-size: 28px;
-//       line-height: 32px;
-//     }
+@media screen and (max-width: 767px) {
+  .starting {
+    margin: 36px 0px;
 
-//     &__wrapper {
-//       padding: 36px 28px;
-//     }
+    &__title {
+      font-size: 28px;
+      line-height: 32px;
+    }
 
-//     &__card {
-//       flex-basis: calc(50% - 15px);
+    &__wrapper {
+      padding: 36px 28px;
+    }
 
-//       &:first-child {
-//         padding-bottom: 40px;
-//       }
-//     }
-//   }
-// }
+    &__card {
+      flex-basis: calc(50% - 15px);
+    }
+  }
+}
 
-// @media screen and (max-width: 620px) {
-//   .starting__container {
-//     gap: 20px;
-//   }
+@media screen and (max-width: 660px) {
+  .starting__container {
+    gap: 20px;
+  }
 
-//   .starting__card {
-//     flex-basis: 100%;
-//     width: 100%;
-//   }
-// }
+  .starting__card {
+    flex-basis: 100%;
+    width: 100%;
+  }
+}
 
-// @media screen and (max-width: 576px) {
-//   .starting__title {
-//     font-size: 20px;
-//     line-height: 24px;
-//   }
+@media screen and (max-width: 576px) {
+  .starting__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
 
-//   .starting__wrapper {
-//     padding: 24px 16px;
-//   }
+  .starting__wrapper {
+    padding: 24px 16px;
+  }
 
-//   .starting__container {
-//     flex-direction: column;
-//     gap: 20px;
-//   }
+  .starting__container {
+    flex-direction: column;
+    gap: 20px;
+  }
 
-//   .starting__card {
-//     padding: 40px 24px;
-//     gap: 16px;
+  .starting__card {
+    padding: 36px 24px;
+    gap: 16px;
 
-//     &_title {
-//       font-size: 16px;
-//       line-height: 21.6px;
-//     }
+    &_title {
+      font-size: 16px;
+      line-height: 21.6px;
+    }
 
-//     &_text {
-//       font-size: 13px;
-//       line-height: 16.3px;
-//     }
-//   }
-// }
+    &_text {
+      font-size: 13px;
+      line-height: 16.3px;
+    }
+  }
+}
