--- a/src/components/Form/components/ItemSelect/styles.module.scss
+++ b/src/components/Form/components/ItemSelect/styles.module.scss
@@ -60,3 +60,15 @@
     }
   }
 }
+
+@media screen and (max-width: 576px) {
+  .item-select__wrapper {
+    padding: 16px;
+  }
+
+  .item-select__row {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+}
