--- a/src/components/Popap/styles.module.scss
+++ b/src/components/Popap/styles.module.scss
@@ -3,10 +3,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  // height: 100vh;
-  // width: 100vw;
-  // background-color: var(--page-color-dark-blue-opacity8);
-  // opacity: 0.8;
   outline: 0;
   pointer-events: none;
   z-index: 1001;
@@ -70,6 +66,19 @@
     & .popap-clever-content {
       animation: fadeOut 0.2s forwards;
     }
+  }
+
+  & div,
+  p,
+  span,
+  a,
+  input,
+  textarea,
+  keygen,
+  select,
+  button,
+  h2 {
+    font-family: 'Verdana', sans-serif !important;
   }
 }
 
