--- a/src/modules/Main/components/Support/components/News/styles.module.scss
+++ b/src/modules/Main/components/Support/components/News/styles.module.scss
@@ -45,6 +45,8 @@
     border: none !important;
     border-radius: 50%;
     transition: background-color 0.3s ease;
+    padding: 0px !important;
+    margin: 0px !important;
 
     & svg {
       width: 9px;
