added change manager from poll result

--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -75,6 +75,7 @@
   }
 
   &__menu_async {
+    font-family: 'Verdana', sans-serif !important;
     padding-left: 4px !important;
     border-radius: 6px !important;
     box-shadow: 0px 4px 24px 0px rgba(59, 74, 89, 0.12),
