--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -36,6 +36,10 @@
     font-weight: 700;
     line-height: 21.6px;
     color: var(--page-color-black);
+
+    &_m {
+      font-weight: 400;
+    }
   }
 
   &__header {
