--- a/src/modules/Main/components/Information/styles.module.scss
+++ b/src/modules/Main/components/Information/styles.module.scss
@@ -17,6 +17,7 @@
   &__wrapper {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     margin-top: 50px;
   }
